--- a/luffycityweb/package.json
+++ b/luffycityweb/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "@vitejs/plugin-vue-jsx": "^4.1.1",
+    "vite-plugin-vue-jsx": "^0.0.4",
+    "vue": "^3.5.13",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
