--- a/luffycityweb/package.json
+++ b/luffycityweb/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^4.1.1",
+    "element-plus": "^2.9.1",
+    "unplugin-vue-components": "^0.28.0",
     "vite-plugin-vue-jsx": "^0.0.4",
     "vue": "^3.5.13",
     "vue-router": "^4.0.13"
