--- a/luffycityweb/package.json
+++ b/luffycityweb/package.json
@@ -9,13 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "axios": "^1.7.0-beta.2",
     "element-plus": "^2.9.1",
     "unplugin-vue-components": "^0.28.0",
     "vite-plugin-vue-jsx": "^0.0.4",
     "vue": "^3.5.13",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
