--- a/luffycityweb/package.json
+++ b/luffycityweb/package.json
@@ -16,6 +16,7 @@
     "unplugin-vue-components": "^0.28.0",
     "vite-plugin-vue-jsx": "^0.0.4",
     "vue": "^3.5.13",
+    "vue-aliplayer-v3": "^1.0.3",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.1.0"
