--- a/luffycityapi/requirements.txt
+++ b/luffycityapi/requirements.txt
@@ -1,62 +1,60 @@
-Package                   Version
-------------------------- -----------
-aliyun-python-sdk-core    2.16.0
-aliyun-python-sdk-kms     2.16.5
-amqp                      5.3.1
-asgiref                   3.8.1
-async-timeout             5.0.1
-backports.zoneinfo        0.2.1
-billiard                  4.2.1
-celery                    5.4.0
-certifi                   2025.1.31
-cffi                      1.17.1
-charset-normalizer        3.4.1
-click                     8.1.8
-click-didyoumean          0.3.1
-click-plugins             1.1.1
-click-repl                0.3.0
-crcmod                    1.7
-cryptography              44.0.0
-Django                    4.2.17
-django-ckeditor           6.7.2
-django-cors-headers       4.4.0
-django-db-connection-pool 1.2.5
-django-haystack           3.3.0
-django-js-asset           2.2.0
-django-oss-storage        1.1.1
-django-redis              5.4.0
-django-simpleui           2025.1.13
-django-stdimage           6.0.2
-djangorestframework       3.15.2
-djangorestframework-jwt   1.11.0
-drf-haystack              1.9.1
-elasticsearch             7.13.4
-Faker                     35.2.2
-greenlet                  3.1.1
-idna                      3.10
-jmespath                  0.10.0
-kombu                     5.4.2
-oss2                      2.19.1
-packaging                 24.2
-pillow                    10.4.0
-pip                       24.2
-prompt_toolkit            3.0.50
-pycparser                 2.22
-pycryptodome              3.21.0
-PyJWT                     1.7.1
-PyMySQL                   1.1.1
-python-dateutil           2.9.0.post0
-redis                     5.2.1
-requests                  2.32.3
-setuptools                75.1.0
-six                       1.17.0
-SQLAlchemy                2.0.36
-sqlparams                 6.1.0
-sqlparse                  0.5.3
-tencentcloud-sdk-python   3.0.1315
-typing_extensions         4.12.2
-tzdata                    2025.1
-urllib3                   1.26.20
-vine                      5.1.0
-wcwidth                   0.2.13
-wheel                     0.44.0
+aliyun-python-sdk-core==2.16.0
+aliyun-python-sdk-kms==2.16.5
+amqp==5.3.1
+asgiref==3.8.1
+async-timeout==5.0.1
+backports.zoneinfo==0.2.1
+billiard==4.2.1
+celery==5.4.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+crcmod==1.7
+cryptography==44.0.0
+Django==4.2.17
+django-ckeditor==6.7.2
+django-cors-headers==4.4.0
+django-db-connection-pool==1.2.5
+django-haystack==3.3.0
+django-js-asset==2.2.0
+django-oss-storage==1.1.1
+django-redis==5.4.0
+django-simpleui==2025.1.13
+django-stdimage==6.0.2
+djangorestframework==3.15.2
+djangorestframework-jwt==1.11.0
+drf-haystack==1.9.1
+elasticsearch==7.13.4
+Faker==35.2.2
+greenlet==3.1.1
+idna==3.10
+jmespath==0.10.0
+kombu==5.4.2
+oss2==2.19.1
+packaging==24.2
+pillow==10.4.0
+pip==24.2
+prompt_toolkit==3.0.50
+pycparser==2.22
+pycryptodome==3.21.0
+PyJWT==1.7.1
+PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
+redis==5.2.1
+requests==2.32.3
+setuptools==75.1.0
+six==1.17.0
+SQLAlchemy==2.0.36
+sqlparams==6.1.0
+sqlparse==0.5.3
+tencentcloud-sdk-python==3.0.1315
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==1.26.20
+vine==5.1.0
+wcwidth==0.2.13
+wheel==0.44.0
